		Authorization: Fixed invalid static calls to instance methods.
		(2007-10-12 - Adam Franco)
		
	* New feature: 
		ErrorHander: Exceptions and Errors are now printed in a plain text mode when
		scripts are called from the command line environment.
		(2007-10-12 - Adam Franco)
		
	* Change: 
		Removing unneeded $harmoni paramaters from Action Source methods.
		(2007-10-17 - Adam Franco)
	
v. 0.12.3 (2007-09-25)
----------------------------------------------------

		
	* Change: 
		ImageProcessor: Now throws exceptions when ImageMagic fails.
		(2007-09-25 - Adam Franco)
		
	* New feature: 
		GUI: New 'UnstyledMenuItem' element.
		(2007-09-25 - Adam Franco)
		
	* Change: 
		GUI: MenuLinks with Additional HTML now put that additional HTML in the
		themed part of the element.
		(2007-09-21 - Adam Franco)
		
	* Bug Fix: 
		Hierarchy: Catching 'not found' Exceptions added in 0.12.2 in cases where no
		results should exist.
		(2007-09-21 - Adam Franco)
	
v. 0.12.2 (2007-09-20)
----------------------------------------------------

		
	* Change: 
		Removed the legacy StorageHandler. If this functionality is needed in the
		future, the Filing OSID is more appropriate.
		(2007-09-19 - Adam Franco)
		
	* Bug Fix: 
		Updated PhpDoc comments to generate properly.
		(2007-09-19 - Adam Franco)
		
	* Bug Fix: 
		Agent: Fixed column type-mismatch in Agent table definition.
		(2007-09-17 - Adam Franco)
		
	* Bug Fix: 
		DBHandler: SQLUtils::runSQLdir() now explicitly sorts SQL files and runs
		them in alphabetical order.
		(2007-09-17 - Adam Franco)
		(reported by Jos&#xE9; Alfonso Accino of University of M&#xE1;laga)
		
	* Bug Fix: 
		Repository: Fixing PHP notices.
		(2007-09-14 - Adam Franco)
		
	* Change: 
		Hierarchy: Adding some error-checking and Exceptions on errors.
		(2007-09-14 - Adam Franco)
	
v. 0.12.1 (2007-09-14)
----------------------------------------------------

		
	* Bug Fix: 
		Updating the MySQL Hierarchy and Scheduling table definitions to work with