@@ -71,6 +71,8 @@
 <b>New feature:</b> ErrorHander: Exceptions and Errors are now printed in a plain text mode when scripts are called from the command line environment. (<em>2007-10-12 - Adam Franco</em>)</li>
 		<li>
 <b>Change:</b> Removing unneeded $harmoni paramaters from Action Source methods. (<em>2007-10-17 - Adam Franco</em>)</li>
+		<li>
+<b>Bug Fix:</b> Authorization: Fixed type description searching. Only Domain, Authority, and Keyword define the type. (<em>2007-10-22 - Adam Franco</em>)</li>
 	</ul>
 <br><h2>Version 0.12.3</h2>
 <h3>2007-09-25</h3>
